codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_approval_form_with_session_persist.snap
---
source: tui_app_server/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  字 段  1/1                                                                                                              
  允 许 此 请 求 吗 ？                                                                                                         
  › 1. 允 许           运 行 该 工 具 并 继 续 。                                                                                  
    2. 本 次 会 话 允 许   运 行 该 工 具 ， 并 在 当 前 会 话 记 住 此 选 择 。                                                                
    3. 始 终 允 许       运 行 该 工 具 ， 并 在 后 续 工 具 调 用 中 记 住 此 选 择 。                                                          
    4. 取 消           取 消 这 次 工 具 调 用                                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter 提 交  | Esc 取 消
