codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_boolean_form.snap
---
source: tui_app_server/src/bottom_pane/mcp_server_elicitation.rs
assertion_line: 2374
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  字 段  1/1（ 1 个 必 填 未 答 ）                                                                                               
  允 许 此 请 求 吗 ？                                                                                                         
                                                                                                                        
  确 认                                                                                                                   
  批 准 待 处 理 操 作 。                                                                                                       
  › 1. 是                                                                                                                
    2. 否                                                                                                                
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  Enter 提 交  | Esc 取 消
